fix common, fix connector db, template response